--- a/excursionapp/templates/excursions.html
+++ b/excursionapp/templates/excursions.html
@@ -75,7 +75,7 @@
                             <div class="excursion-card">
                                 <img src="{{ excursion.image_url }}" alt="{{ excursion.title }}">
                                 <div class="card-content">
-                                    <h3>{{ excursion.title }}</h3>
+                                    <h3>{{ excursion.translated_title }}</h3>
                                     <p class="tour-type">{% trans excursion.duration %}</p>
                                     <div class="price-book">
                                         <span class="price">{{ excursion.price }} ₸</span>
