--- a/excursionapp/templates/update_excursion.html
+++ b/excursionapp/templates/update_excursion.html
@@ -178,21 +178,26 @@
             </div>
             
             <div class="form-group">
-                <label class="form-label">Изображение экскурсии</label>
+                <label class="form-label">Изображения экскурсии</label>
                 <div class="file-input-container">
-                    <label for="id_image_file" class="file-input-label">
-                        <i class="fas fa-upload"></i> Выберите изображение
+                    <label for="id_images_to_upload" class="file-input-label">
+                        <i class="fas fa-upload"></i> Выберите несколько изображений
                     </label>
-                    {{ form.image_file|add_class:"file-input" }}
-                    <div class="file-input-name" id="file-name">{% if excursion.image_name %}{{ excursion.image_name }}{% else %}Файл не выбран{% endif %}</div>
+                    <input type="file" name="images_to_upload" id="id_images_to_upload" accept="image/*" multiple class="file-input">
+                    <div class="file-input-name" id="file-name-multiple">Файлы не выбраны</div>
                 </div>
-                <div class="image-preview" id="image-preview">
-                    {% if excursion.image %}
-                    <img src="data:image/jpeg;base64,{{ excursion.image|to_base64 }}" alt="Текущее изображение">
+                <div class="image-preview-multiple" id="image-preview-multiple">
+                    {% if excursion.images.all %}
+                        {% for img in excursion.images.all %}
+                            <div class="image-preview-item">
+                                <img src="data:image/jpeg;base64,{{ img.image|to_base64 }}" alt="{{ img.image_name }}">
+                            </div>
+                        {% endfor %}
                     {% else %}
-                    <span>Предпросмотр изображения</span>
+                        <span>Предпросмотр изображений</span>
                     {% endif %}
                 </div>
+                <div class="form-help-text">Выберите одно или несколько изображений. При загрузке новых, старые будут удалены.</div>
             </div>
             
             <div class="form-group">
