--- a/static/css/create_excursion.css
+++ b/static/css/create_excursion.css
@@ -323,6 +323,30 @@ body {
     color: #007bff;
 } 
 
+.image-preview {
+    width: 100%;
+    height: 200px;
+    border: 2px dashed #ddd;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    overflow: hidden;
+}
+
+.image-preview img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+.image-preview span {
+    color: #aaa;
+    font-style: italic;
+}
+
+
 .image-preview-multiple {
     width: 100%;
     min-height: 200px; /* Adjust as needed */
